--- a/使い方.md
+++ b/使い方.md
@@ -33,6 +33,15 @@ python main.py
 
 # ノード名を指定して起動
 python main.py --hostname "避難所A"
+
+# セキュアモードで起動（デジタル署名認証）
+python main.py --secure
+
+# 中継専用モードで起動（GUI非表示、低リソース消費）
+python main.py --relay-only
+
+# 中継専用モード + ノード名指定
+python main.py --relay-only --hostname "中継ポイントA"
 ```
 
 ---
@@ -202,11 +211,46 @@ pip install pycryptodome
 **方法**:
 1. 中継地点にPCを配置（自動販売機の横、公園のベンチなど）
 2. モバイルバッテリーで給電
-3. プログラムを起動したまま放置
+3. **中継専用モード**で起動（GUI非表示、低リソース消費）
 
-### 暗号化キーの変更（セキュリティ強化）
+```bash
+# 中継専用モードで起動
+python main.py --relay-only --hostname "中継ポイントA"
+```
 
-デフォルトの共有キーを変更したい場合:
+**中継専用モードの特徴**:
+- GUI完全非表示でCPU・メモリ使用量を最小化
+- バッテリー持続時間が通常モードの約1.5-2倍
+- 30秒ごとに統計情報を表示（接続ノード数、中継メッセージ数）
+- Ctrl+Cで安全に終了可能
+
+### セキュアモード（デジタル署名認証）
+
+**重要**: 標準モードでは共有鍵を知っている悪意のあるユーザーがなりすまし可能です。セキュアモードを使用することを強く推奨します。
+
+**セキュアモードで起動**:
+```bash
+python main.py --secure
+```
+
+**セキュアモードの特徴**:
+- **公開鍵暗号方式**: 各ノードが独自の鍵ペアを持つ
+- **デジタル署名**: すべてのメッセージに送信者の署名が付与
+- **なりすまし防止**: 署名が無効なメッセージは自動的に破棄
+- **信頼スコアシステム**: 不審なノードを自動的に検出・ブロック
+
+**初回起動時**:
+- 自動的に鍵ペアが生成されます（`keys/` ディレクトリに保存）
+- `<node_id>_private.pem`: 秘密鍵（厳重に保管）
+- `<node_id>_public.pem`: 公開鍵（他ノードと共有）
+
+**セキュリティ上の注意**:
+- 秘密鍵ファイルは絶対に他人に渡さない
+- 秘密鍵が漏洩した場合は鍵ファイルを削除して再生成
+
+### 暗号化キーの変更（共有鍵方式）
+
+標準モード使用時、デフォルトの共有キーを変更する場合:
 
 1. `crypto_utils.py` を開く
 2. 以下の行を変更:
@@ -215,6 +259,8 @@ def __init__(self, shared_key: str = "disaster-mesh-2024"):
 ```
 
 3. すべてのノードで同じキーを使用する必要があります
+
+**注意**: セキュアモードではこの設定は不要です
 
 ### ログの確認
 
@@ -250,7 +296,11 @@ A: Wi-Fiの到達距離に依存します。屋外で約50-100メートル、建
 
 **Q: セキュリティは大丈夫？**
 
-A: すべての通信はAES-256で暗号化されています。ただし、共有キーを知っている人は復号可能です。
+A: すべての通信はAES-256で暗号化されています。さらに、`--secure` オプションでデジタル署名認証を有効化することで、なりすましや改ざんを防止できます。災害時の重要通信にはセキュアモードの使用を強く推奨します。
+
+**Q: 悪意のあるユーザーが偽のメッセージを送ってきたら？**
+
+A: セキュアモード（`--secure`）を使用している場合、デジタル署名のないメッセージや署名が無効なメッセージは自動的に破棄されます。さらに、不審な動きをするノードは信頼スコアが下がり、自動的にブロックされます。
 
 ---
 
